kubernetes manifest/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
      - name: postgres
        image: postgres
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5432
        # Note that volume mounts from windows to linux causes a lot of issues. When running in docker-deskop kubernetes, you need some
        # magic work arounds. 
        # https://github.com/docker/for-win/issues/1758 
        # hopefully it gets fixed soon
        volumeMounts: 
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
            subPath: postgres
        # env:
        #   - name: PGPASSWORD
        #     valueFrom:
        #       secretKeyRef:
        #         name: pgpassord
        #         key: PGPASSWORD
