kubernetes manifest/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: agao2/core_server:1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m" #100m = .1 cpu or 100 millicpu
        ports:
        - containerPort: 5000
